# cora

./: pyproject.toml  results.txt  zuordnung.txt
cora/: helpers.py
scripts/: ml_all.py  ml_fast_prop.py  ml_fixed_split.py  ml_relboost.py
tests/: tests.py
visualization/: Untitled 1.ods  Untitled 2.odg
